fixed spacing with nav services drop down menu

--- a/aot-next-front/styles/Home.module.scss
+++ b/aot-next-front/styles/Home.module.scss
@@ -184,8 +184,8 @@
               // stroke-miterlimit: 10;
               stroke-dashoffset: -410;
               stroke-dasharray: 410;
-              // transition: stroke-dashOffset 1s ease;
-              animation: draw 1s forwards;
+              transition: stroke-dashOffset 8s ease;
+              animation: draw .75s forwards;
             }
           }
         }
@@ -402,23 +402,20 @@
         
         ul{
           width: 100%;
-          min-height: 150px;
-          // margin: 1em;
+          height: auto;
+          padding: 1.5em 0;
           position: relative;
           display: grid;
           grid-template: 1fr 1fr / 1fr 1fr 1fr;
           grid-template-areas: "1 2 3" "4 5 6";
-          // @include flexRowCenterBetween;
-          // flex-wrap: wrap;
+          row-gap: 1.5em;
           font-size: 16px;
           
           li{
-            height: 100%;
+            justify-self: center;
             width: 100%;
-            @include flexItemCenter;
 
             a{
-              margin: .5em;
               text-align: center;
   
               &:hover{
